--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cannon-es": "^0.20.0",
     "dat.gui": "^0.7.9",
     "three": "^0.182.0",
+    "three-custom-shader-material": "^6.4.0",
     "yuka": "^0.7.8"
   }
 }
